Add attack static object in Text Client

--- a/Zilon.Core/Zilon.TextClient/UiResource.resx
+++ b/Zilon.Core/Zilon.TextClient/UiResource.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AttackCommandDescription" xml:space="preserve">
-    <value>- "attack [id] to attack enemy"</value>
+    <value>- "attack [id] a" to attack enemy (or "s"to attack object)</value>
   </data>
   <data name="CommandCantExecuteMessage" xml:space="preserve">
     <value>You can not do this</value>
