--- a/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.resx
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.resx
@@ -171,4 +171,55 @@
   <data name="SwitchAutomodeButtonTitle" xml:space="preserve">
     <value>Autoplay: {0}</value>
   </data>
+  <data name="PhysicalStrengthAttributeTitle" xml:space="preserve">
+    <value>Physical Strength</value>
+  </data>
+  <data name="DexterityAttributeTitle" xml:space="preserve">
+    <value>Dexterity</value>
+  </data>
+  <data name="PerceptionAttributeTitle" xml:space="preserve">
+    <value>Perception</value>
+  </data>
+  <data name="ConstitutionAttributeTitle" xml:space="preserve">
+    <value>Constitution</value>
+  </data>
+  <data name="PhysicalStrengthAttributeDescription" xml:space="preserve">
+    <value>Physical, brute strength of the character.
+Affects melee weapon damage.
+Acts as a restriction on the wearing of heavy equipment.</value>
+  </data>
+  <data name="DexterityAttributeDescription" xml:space="preserve">
+    <value>Agility, physical flexibility of the character, stretching.
+Acts as a restriction on equipment, such as daggers, staves.</value>
+  </data>
+  <data name="PerceptionAttributeDescription" xml:space="preserve">
+    <value>Perception, sight. Ability to see, notice.
+Acts as a restriction on the use of ranged weapons.
+Or weapons based on precise strikes rather than strength (daggers, spears).</value>
+  </data>
+  <data name="ConstitutionAttributeDescription" xml:space="preserve">
+    <value>Affects how many wounds can
+take out the character before he dies.</value>
+  </data>
+  <data name="UbnormalAttributeValueTitle" xml:space="preserve">
+    <value>Ubnormal</value>
+  </data>
+  <data name="DefectiveAttributeValueTitle" xml:space="preserve">
+    <value>Defective</value>
+  </data>
+  <data name="LowAttributeValueTitle" xml:space="preserve">
+    <value>Low</value>
+  </data>
+  <data name="NormalAttributeValueTitle" xml:space="preserve">
+    <value>Normal</value>
+  </data>
+  <data name="BelowNormalAttributeValueTitle" xml:space="preserve">
+    <value>Below normal</value>
+  </data>
+  <data name="AboveNormalAttributeValueTitle" xml:space="preserve">
+    <value>Above normal</value>
+  </data>
+  <data name="SuperAttributeValueTitle" xml:space="preserve">
+    <value>Super</value>
+  </data>
 </root>
