--- a/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
@@ -222,4 +222,31 @@
   <data name="DefectiveAttributeValueTitle" xml:space="preserve">
     <value>Дефектное</value>
   </data>
+  <data name="HealCommandButtonTitle" xml:space="preserve">
+    <value>Лечить</value>
+  </data>
+  <data name="EatCommandButtonTitle" xml:space="preserve">
+    <value>Съесть</value>
+  </data>
+  <data name="DrinkCommandButtonTitle" xml:space="preserve">
+    <value>Выпить</value>
+  </data>
+  <data name="UseCommandButtonTitle" xml:space="preserve">
+    <value>Применить</value>
+  </data>
+  <data name="SlotHand" xml:space="preserve">
+    <value>Рука</value>
+  </data>
+  <data name="SlotHead" xml:space="preserve">
+    <value>Голова</value>
+  </data>
+  <data name="SlotBody" xml:space="preserve">
+    <value>Тело</value>
+  </data>
+  <data name="SlotAux" xml:space="preserve">
+    <value>Доп</value>
+  </data>
+  <data name="EquipInSlotTemplateCommandButton" xml:space="preserve">
+    <value>Надеть на: {0}</value>
+  </data>
 </root>
