--- a/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
@@ -279,4 +279,10 @@
   <data name="ScoreTableNickColumnTitle" xml:space="preserve">
     <value>Псевдоним</value>
   </data>
+  <data name="AddPlayerNicknameButton" xml:space="preserve">
+    <value>Добавить прозвище</value>
+  </data>
+  <data name="ClearPlayerNicknameButton" xml:space="preserve">
+    <value>Очистить</value>
+  </data>
 </root>
