--- a/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.resx
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.resx
@@ -285,4 +285,7 @@ take out the character before he dies.</value>
   <data name="ClearPlayerNicknameButton" xml:space="preserve">
     <value>Clear</value>
   </data>
+  <data name="PlayerInputNicknamePrompt" xml:space="preserve">
+    <value>Please, enter your nickname</value>
+  </data>
 </root>
