--- a/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
@@ -285,4 +285,7 @@
   <data name="ClearPlayerNicknameButton" xml:space="preserve">
     <value>Очистить</value>
   </data>
+  <data name="PlayerInputNicknamePrompt" xml:space="preserve">
+    <value>Введите свое прозвище</value>
+  </data>
 </root>
