Display hotkeys in the control tutorial text

--- a/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.resx
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.resx
@@ -304,6 +304,8 @@ take out the character before he dies.</value>
     <value>[LMB] to move and attack.
 [T] to transit to other level.
 [O] to give loot up.
+[I] to open inventory.
+[C] to open character stats.
 [SPACE] to wait a little.</value>
   </data>
   <data name="SwitchLanguagebuttonTitle" xml:space="preserve">
