--- a/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
@@ -314,4 +314,7 @@
   <data name="SwitchResolutionButtonTitle" xml:space="preserve">
     <value>Разрешение</value>
   </data>
+  <data name="PlayerRatingLabel" xml:space="preserve">
+    <value>Ваш рейтинг в таблице лидеров: {0}</value>
+  </data>
 </root>
