--- a/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
@@ -302,7 +302,7 @@
   </data>
   <data name="ControlsTutorialText" xml:space="preserve">
     <value>[LMB] для передвижения и атаки.
-[T] для перехода на след. уровень.
+[T] для перехода в следующую локацию.
 [O] чтобы подобрать предмет.
 [I] окно инвентаря.
 [С] Окно персонажа.
