--- a/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.resx
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.resx
@@ -306,7 +306,10 @@ take out the character before he dies.</value>
 [O] to give loot up.
 [I] to open inventory.
 [C] to open character stats.
-[SPACE] to wait a little.</value>
+[SPACE] to wait a little.
+[ALT] to highlight interactive.
+[1-8] to select combat action.
+[NUM1-NUM9] to move step by step.</value>
   </data>
   <data name="SwitchLanguagebuttonTitle" xml:space="preserve">
     <value>Switch lang</value>
