--- a/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/Resources/UiResources.ru-RU.resx
@@ -305,8 +305,11 @@
 [T] для перехода в следующую локацию.
 [O] чтобы подобрать предмет.
 [I] окно инвентаря.
-[С] Окно персонажа.
-[SPACE] немного подождать.</value>
+[С] окно персонажа.
+[SPACE] немного подождать.
+[ALT] подсветить интерактив.
+[1-8] выбрать действие в бою.
+[NUM1-NUM9] передвинуться на 1 шаг.</value>
   </data>
   <data name="SwitchLanguagebuttonTitle" xml:space="preserve">
     <value>Смена языка</value>
